Initial development of band page

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,19 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <style>
+    body {
+      background-size: 100%;
+      margin-top:0px;
+    }
+  </style>
   <meta charset="utf-8">
   <title>Frostbitt</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
-</body>
-</html>
+<body background="assets/pictures/dark-phoenix.jpg">
+    <app-root > </app-root >
+    </body >
+    </html >
